[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
colored = "2"
rand = "*"
crossterm = "*"
whoami = "1.1.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"